# weapons-masters

./: .gitignore
3D/blender/characters/: Aerivia_MainCharacter_v005.blend  Aerivia_MainCharacter_v005_relatorio.txt
3D/blender/spawn/: Aerivia_Blockout_v003_organizado.blend  Aerivia_auditoria_exportacao.txt  Aerivia_organizacao_relatorio.txt
Skills/wm-ai-engineering-standards/: SKILL.md
Skills/wm-ai-engineering-standards/agents/: openai.yaml
Skills/wm-ai-engineering-standards/references/: source-notes-2026.md
Skills/wm-anticheat-security/: SKILL.md
Skills/wm-anticheat-security/agents/: openai.yaml
Skills/wm-anticheat-security/references/: threat-model.md
Skills/wm-architecture-roadmap/: SKILL.md
Skills/wm-architecture-roadmap/agents/: openai.yaml
Skills/wm-architecture-roadmap/references/: project-context.md
Skills/wm-code-reviewer/: SKILL.md
Skills/wm-code-reviewer/agents/: openai.yaml
Skills/wm-game-design-economy/: SKILL.md
Skills/wm-game-design-economy/agents/: openai.yaml
Skills/wm-game-design-economy/references/: balance-framework.md
Skills/wm-godot-client/: SKILL.md
Skills/wm-godot-client/agents/: openai.yaml
Skills/wm-godot-client/references/: godot-client-context.md
Skills/wm-infra-ops/: SKILL.md
Skills/wm-infra-ops/agents/: openai.yaml
Skills/wm-liveops-moderation/: SKILL.md
Skills/wm-liveops-moderation/agents/: openai.yaml
Skills/wm-liveops-moderation/references/: liveops-contract.md
Skills/wm-network-protocol/: SKILL.md
Skills/wm-persistence-auth/: SKILL.md
Skills/wm-qa-engineer/: SKILL.md
Skills/wm-server-gameplay/: SKILL.md
Skills/wm-tech-art-audio/: SKILL.md
Skills/wm-world-pipeline/: SKILL.md
client/: Weapons Masters Client.csproj  project.godot  test_ws.cs  test_ws.cs.uid
client/scenes/: AeriviaTest.tscn  Login.tscn  LoginMMORPG.tscn  Main.tscn
docker/: compose.yml
docker/migrations/: 001_initial.sql
docs/: aerivia_character_pipeline_relatorio.md  aerivia_pipeline_relatorio.md  architecture_review.md  architecture_stress_test.md  final_review.md  mmorpg_2026_architecture_guide.md  roadmap.md  rust_godot_stack_analysis.md  sso_architecture_map.md
docs/steps/: 00_visao_geral.md  01_step1_rede.md  02_step2_combate.md  03_step3_persistencia.md  04_step4_multiplayer.md  05_step5_alpha.md
proto/: game_messages.proto
server/: Cargo.toml
server/crates/gateway/: Cargo.toml
server/crates/gateway/src/: lib.rs  main.rs  session.rs
server/crates/persistence/: Cargo.toml
server/crates/persistence/src/: lib.rs  main.rs
server/crates/services/auth/: Cargo.toml
server/crates/services/auth/src/: lib.rs
server/crates/shared/: Cargo.toml  build.rs
server/crates/shared/src/: lib.rs
server/crates/world/: Cargo.toml
server/crates/world/src/: auth_service.rs  combat.rs  components.rs  constants.rs  experience.rs  main.rs  mobs.rs  publisher.rs  resources.rs  spatial.rs
server/crates/world/src/systems/: combat.rs  mod.rs  movement.rs  network.rs  persistence.rs  snapshot.rs  status_effects.rs
tools/blender/: auditar_aerivia.py  criar_personagem_principal.py  exportar_aerivia_godot.py  exportar_personagem_principal_godot.py  organizar_aerivia.py  validar_personagem_principal.py
tools/godot/: validar_aerivia.ps1  validar_personagem_aerivia.gd
(+45 files in other folders)
