[workspace]
members = [
    "crates/gateway",
    "crates/world",
    "crates/shared",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
prost = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
wtransport = { version = "0.7", features = ["self-signed"] }
futures-util = "0.3"
tokio-tungstenite = "0.23"
bevy_ecs = "0.15"
