[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost = { workspace = true }
wtransport = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
