[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
futures-util = { workspace = true }
async-nats = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing-subscriber = { workspace = true }
