[package]
name = "world"
version = "0.1.0"
edition = "2021"

[dependencies]
gateway = { path = "../gateway" }
auth = { path = "../services/auth" }
shared = { path = "../shared" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost = { workspace = true }
bevy_ecs = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = "1"
sqlx = { workspace = true }
redis = { workspace = true }
thiserror = { workspace = true }
