[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = "1"
redis = { workspace = true }
thiserror = { workspace = true }
